# amplifi-alien-exporter

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  amplifi_exporter.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-bump.yml  publish-pypi.yml  release.yml  test.yml
docs/: INSTALL_FROM_GITHUB.md  index.html
tests/: test_exporter.py
